# KIT

./: LICENSE  README.md  pyproject.toml
src/kit_pm/: __init__.py  cli.py  core.py  packages.json
